--- a/latex_new_data_frame_val.tex
+++ b/latex_new_data_frame_val.tex
@@ -2,13 +2,13 @@
 %\label{subsec:direction_results}
 %\vspace{10pt}
 
-Figure~\ref{fig:var_direction.png} represents the $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the heading in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black beacuse each model is equal to itself.
+Figure~\ref{fig:var_direction} represents the $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the heading in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black because each model is equal to itself.
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width = 0.99 \linewidth]{var_direction.png.pdf}
-	\caption{The $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the heading in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black beacuse each model is equal to itself.}
-	\label{fig:var_direction.png}
+	\includegraphics[width = 0.99 \linewidth]{var_direction.pdf}
+	\caption{The $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the heading in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black because each model is equal to itself.}
+	\label{fig:var_direction}
 \end{figure}
 
 Figure~\ref{fig:best_R2_val} contains the average $R^{2}$ (\%) across k-fold testing datasets using different validation datasets for all variables estimated in nested k-fold cross-validation by different RNN models, and forecasting times.
@@ -93,13 +93,13 @@ The UniTS model achieved the lowest MAE for heading, and a forecasting time of $
 %\label{subsec:latitude_no_abs_results}
 %\vspace{10pt}
 
-Figure~\ref{fig:var_latitude_no_abs.png} represents the $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the $y$ offset in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black beacuse each model is equal to itself.
+Figure~\ref{fig:var_lat} represents the $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the $y$ offset in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black because each model is equal to itself.
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width = 0.99 \linewidth]{var_latitude_no_abs.png.pdf}
-	\caption{The $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the $y$ offset in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black beacuse each model is equal to itself.}
-	\label{fig:var_latitude_no_abs.png}
+	\includegraphics[width = 0.99 \linewidth]{var_lat.pdf}
+	\caption{The $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the $y$ offset in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black because each model is equal to itself.}
+	\label{fig:var_lat}
 \end{figure}
 
 The average $R^{2}$ (\%), with standard deviation in brackets, across k-fold validation datasets for the $y$ offset estimated on the k-fold testing datasets by different RNN models, and forecasting times is listed in Table~\ref{tab:best_latitude_no_abs_R2}.
@@ -190,13 +190,13 @@ The UniTS model does not make statistically significantly different predictions 
 %\label{subsec:longitude_no_abs_results}
 %\vspace{10pt}
 
-Figure~\ref{fig:var_longitude_no_abs.png} represents the $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the $x$ offset in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black beacuse each model is equal to itself.
+Figure~\ref{fig:var_long} represents the $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the $x$ offset in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black because each model is equal to itself.
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width = 0.99 \linewidth]{var_longitude_no_abs.png.pdf}
-	\caption{The $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the $x$ offset in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black beacuse each model is equal to itself.}
-	\label{fig:var_longitude_no_abs.png}
+	\includegraphics[width = 0.99 \linewidth]{var_long.pdf}
+	\caption{The $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the $x$ offset in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black because each model is equal to itself.}
+	\label{fig:var_long}
 \end{figure}
 
 The average $R^{2}$ (\%), with standard deviation in brackets, across k-fold validation datasets for the $x$ offset estimated on the k-fold testing datasets by different RNN models, and forecasting times is listed in Table~\ref{tab:best_longitude_no_abs_R2}.
@@ -279,13 +279,13 @@ The UniTS model does not make statistically significantly different predictions 
 %\label{subsec:speed_results}
 %\vspace{10pt}
 
-Figure~\ref{fig:var_speed.png} represents the $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the speed in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black beacuse each model is equal to itself.
+Figure~\ref{fig:var_speed} represents the $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the speed in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black because each model is equal to itself.
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width = 0.99 \linewidth]{var_speed.png.pdf}
-	\caption{The $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the speed in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black beacuse each model is equal to itself.}
-	\label{fig:var_speed.png}
+	\includegraphics[width = 0.99 \linewidth]{var_speed.pdf}
+	\caption{The $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the speed in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black because each model is equal to itself.}
+	\label{fig:var_speed}
 \end{figure}
 
 The average $R^{2}$ (\%), with standard deviation in brackets, across k-fold validation datasets for the speed estimated on the k-fold testing datasets by different RNN models, and forecasting times is listed in Table~\ref{tab:best_speed_R2}.
