--- a/latex_new_data_frame_val_direction.tex
+++ b/latex_new_data_frame_val_direction.tex
@@ -2,13 +2,13 @@
 %\label{subsec:direction_results}
 %\vspace{10pt}
 
-Figure~\ref{fig:var_direction.png} represents the $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the heading in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black beacuse each model is equal to itself.
+Figure~\ref{fig:var_direction} represents the $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the heading in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black because each model is equal to itself.
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width = 0.99 \linewidth]{var_direction.png.pdf}
-	\caption{The $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the heading in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black beacuse each model is equal to itself.}
-	\label{fig:var_direction.png}
+	\includegraphics[width = 0.99 \linewidth]{var_direction.pdf}
+	\caption{The $p$-values for the Mann-Whitney $U$-test on actual and predicted values across k-fold validation datasets for the heading in the k-fold testing datasets using different RNN models, and forecasting times. Darker colors in grayscale represent a higher $p$-value in a range from $0$ to $1$. The values on the secondary diagonal are all equal to $1$ and black because each model is equal to itself.}
+	\label{fig:var_direction}
 \end{figure}
 
 Figure~\ref{fig:best_R2_val} contains the average $R^{2}$ (\%) across k-fold testing datasets using different validation datasets for all variables estimated in nested k-fold cross-validation by different RNN models, and forecasting times.
